# langgraphx

./: .env.example  AGENTS.md  README.md  Taskfile.yml  langgraphx-development.code-workspace  pyproject.toml
.ai/: context.md  instructions.md  rules.md
.ai/workflows/: add-agent.md  add-project.md  add-tool.md
docs/: MIGRATION-UV.md  QUICK-TEST.md  WORKSPACE-SETUP.md  architecture.md  multi-root-workspace.md  uv-guide.md
docs/adr/: 001-use-langgraph.md  002-generic-agents-vs-project-specific.md  003-vscode-lm-proxy-integration.md  004-multi-project-state-management.md
projects/enx/: config.yaml  examples.yaml
projects/rssx/: config.yaml  examples.yaml
projects/w10n-config/: config.yaml  examples.yaml
scripts/: verify_setup.py
src/: __init__.py  main.py
src/agents/: __init__.py  architect.py  developer.py  reviewer.py  supervisor.py  tester.py
src/config/: projects.py
src/graph/: __init__.py  builder.py  checkpointer.py  state.py
src/llm/: proxy_client.py
src/tools/: __init__.py  file_tools.py  git_tools.py
tests/: __init__.py  conftest.py  test_graph.py  test_projects.py
